--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
   max-width: 880px;
-  margin: 45px auto 60px;
+  min-height: 100vh;
+  margin: 0 auto;
   padding: 0;
   font-family: 'Inter', Arial, sans-serif;
 }
