--- a/src/blocks/element/__trash/element__trash.css
+++ b/src/blocks/element/__trash/element__trash.css
@@ -17,3 +17,9 @@
   opacity: 0.6;
   cursor: pointer;
 }
+.element__trash_visible {
+  display: block;
+}
+.element__trash_hidden {
+  display: none;
+}
